--- a/EnPuerta/src/main/resources/templates/nuevosocio.html
+++ b/EnPuerta/src/main/resources/templates/nuevosocio.html
@@ -10,9 +10,18 @@
   <input type="text" name="apellido" placeholder="apellido">
   <input type="text" name="dni" placeholder="dni">
   <input type="email" name="email" placeholder="email">
+   <input type="text" name="telefono" placeholder="telefono">
+  <input type="text" name="telefono2" placeholder="telefono2">
+  <input type="text" name="direccion" placeholder="direccion">
+   <input type="text" name="genero" placeholder="genero">
+  <input type="text" name="localidad" placeholder="localidad">
+  <input type="text" name="presente" placeholder="presente">
+   <input type="text" name="fecha_de_nacimiento" placeholder="fecha_de_nacimiento">
   <input type="submit" value="Submit">
 </form> 
 
 
 </body>
 </html>
+
+
