--- a/EnPuerta/src/main/resources/templates/nuevosocio.html
+++ b/EnPuerta/src/main/resources/templates/nuevosocio.html
@@ -16,7 +16,7 @@
    <input type="text" name="genero" placeholder="genero">
   <input type="text" name="localidad" placeholder="localidad">
   <input type="text" name="presente" placeholder="presente">
-   <input type="datetime-local" name="fecha_de_nacimiento" placeholder="fecha_de_nacimiento">
+   <input type="date" name="fecha_de_nacimiento" placeholder="fecha_de_nacimiento">
   <input type="submit" value="Submit">
 </form> 
 
