--- a/EnPuerta/src/main/resources/templates/nuevosocio.html
+++ b/EnPuerta/src/main/resources/templates/nuevosocio.html
@@ -10,6 +10,7 @@
   <input type="text" name="apellido" placeholder="apellido">
   <input type="text" name="dni" placeholder="dni">
   <input type="email" name="email" placeholder="email">
+  <input type="text" name="celular" placeholder="celular">
    <input type="text" name="telefono" placeholder="telefono">
   <input type="text" name="telefono2" placeholder="telefono2">
   <input type="text" name="direccion" placeholder="direccion">
